# dennou-live

./: .gitignore  Makefile  README.md  README.rdoc
auto/: build  clean  config
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/: COPYRIGHT  ChangeLog  Config.mk.in  INSTALL  INSTALL.ja  MEMO  Makefile  README  README.ja  SIGEN.htm  TODO  aclocal.m4  chkfort.sh  chkgmake.sh  chkpcl.sh  configure  configure.in
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/demo/: Makefile  at_diff.f90  at_diff1.f90  at_diff_eigen_cheb.f90  at_diff_eigen_grid.f90  au_diff_disk.f90  au_diff_sphere.f90  ee_diff1.f90  esc_diff_c.f90  esc_diff_s.f90  et_diff1.f90  wt_diff1.f90  wt_diff2.f90  wt_diff3.f90  wt_diff4.f90  wt_diff5.f90  wu_cn_diff_D1.f90
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/doc/: INSTALL.html  INSTALL.html.ja  INSTALL.rd  Makefile  Makefile.rd2html  cheb_gal.tex  chebyshev.tex  chebyshev_origin.tex  ee_module.tex  spectral_radial.tex  spml_modules.rdoc  w_module.tex  w_module_sjpack.tex
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/html/: created.rid  fr_class_index.html  fr_file_index.html  fr_method_index.html  index.html  rdoc-style.css
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/html/classes/: ae_module.html  aq_module.html  at_ab_galerkin_ND.html  at_ad_galerkin_DD.html  at_af_galerkin_MM.html  at_ah_galerkin_MMex.html  at_ap_galerkin_DN.html  at_aq_galerkin_RRSS.html  at_av_galerkin_NN.html  at_module.html  au_module.html  ee_module.html  eee_module.html  eee_mpi_module.html  eigmatrix.html  eq_module.html  esc_module.html  et_galerkin_module.html  et_module.html  l_module.html  la_module.html  lapack_eigen.html  lumatrix.html  ssl2_eigen.html  ssl2tp_eigen.html  w_base_module.html  w_base_mpi_module.html  w_deriv_module.html  w_deriv_mpi_module.html  w_integral_module.html  w_integral_mpi_module.html  w_interpolate_module.html  w_module.html  w_mpi_module.html  w_spectrum_module.html  w_zonal_module.html  wa_base_module.html  wa_base_mpi_module.html  wa_deriv_module.html  wa_deriv_mpi_module.html  (+14 more)
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/spmfrt/: Makefile  spmconfiggen.sh  spmfrtgen.sh
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/src/: Makefile  ae_module.f90  ae_module_fftj.f90  aq_module.f90  at_ab_galerkin_ND.f90  at_ad_galerkin_DD.f90  at_af_galerkin_MM.f90  at_ah_galerkin_MMex.f90  at_ap_galerkin_DN.f90  at_aq_galerkin_RRFF.f90  at_av_galerkin_NN.f90  at_module.f90  au_module.f90  c2ajcc.f  dlgamma.f  dsort_netlib.f  ee_module.f90  ee_module_fftj.f90  eee_module.f90  ef_module.f90  eigmatrix.g90  eq_module.f90  esc_module.f90  et_galerkin_module.f90  et_galerkin_module_fftj.f90  et_module.f90  et_module_fftj.f90  gamma.f90  indexx.f90  l_module.f90  l_module_sjpack.f90  la_module.f90  la_module_sjpack.f90  lapack_eigen.f90  lumatrix.f90  lumatrix_f77.f  lumatrix_f77_vec.f  ssl2_eigen.f90  ssl2tp_eigen.f90  tee_module.f90  (+40 more)
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/src-mpi/: Makefile  eee_mpi_module.f90  w_base_mpi_module.f90  w_deriv_mpi_module.f90  w_integral_mpi_module.f90  w_mpi_module.f90  wa_base_mpi_module.f90  wa_deriv_mpi_module.f90  wa_integral_mpi_module.f90  wa_mpi_module.f90  wt_mpi_module.f90
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/supplemental/: Makefile  at_ab_galerkin_ND1.f90  at_ab_galerkin_ND2.f90  at_ad_galerkin_DD1.f90  at_ad_galerkin_DD2.f90  at_af_galerkin_MM1.f90  at_af_galerkin_MM2.f90  at_ah_galerkin_MM1ex.f90  at_ah_galerkin_MM2ex.f90  at_ap_galerkin_DN1.f90  at_ap_galerkin_DN2.f90  at_aq_galerkin_RRSS1.f90  at_aq_galerkin_RRSS2.f90  at_av_galerkin_NN1.f90  at_av_galerkin_NN2.f90
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/test/: Makefile
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/test/ae_module/: Makefile  ae_test_base1d.f90  ae_test_base2d.f90  ae_test_intavr.f90
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/test/ae_module_fftj/: Makefile  ae_module_fftj_base1d_test.f90  ae_module_fftj_base2d_test.f90  ae_module_fftj_integral_test.f90
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/test/aq_module/: Makefile  aq_test1.f90  aq_test2.f90  aq_test_base1d.f90  aq_test_base2d.f90  aq_test_boundary_grid_1d.f90  aq_test_boundary_grid_2d.f90  aq_test_boundary_tau_1d.f90  aq_test_boundary_tau_2d.f90  aq_test_intavr.f90  aq_test_weight.f90
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/test/at_galerkin_module/: Makefile  at_ab_galerkin_ND_test1d.f90  at_ab_galerkin_ND_test2d.f90  at_ad_galerkin_DD_test1d.f90  at_ad_galerkin_DD_test2d.f90  at_af_galerkin_MM_test1d.f90  at_af_galerkin_MM_test2d.f90  at_ah_galerkin_MMex_test1.f90  at_ap_galerkin_DN_test1d.f90  at_ap_galerkin_DN_test2d.f90  at_aq_galerkin_RR_test1d.f90  at_aq_galerkin_RR_test2d.f90  at_aq_galerkin_RS_test1d.f90  at_aq_galerkin_SR_test1d.f90  at_aq_galerkin_SS_test1d.f90  at_aq_galerkin_SS_test2d.f90  at_av_galerkin_NN_test1d.f90  at_av_galerkin_NN_test2d.f90
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/test/at_module/: Makefile  at_matrix.f90  at_test_base.f90  at_test_base1d.f90  at_test_base2d.f90  at_test_boundaries1d.f90  at_test_boundaries2d.f90  at_test_intavr.f90  at_test_interpolate.f90  at_test_weight.f90
config/chroot_local-includes/etc/skel/Desktop/Tutorial/dcmodel/spmodel/SPMODEL_web/spml/test/au_module/: Makefile  au_test_base1d.f90  au_test_base2d.f90  au_test_boundary_grid_1d.f90  au_test_boundary_grid_2d.f90  au_test_boundary_tau_1d.f90  au_test_boundary_tau_2d.f90  au_test_intavr.f90  au_test_weight.f90
(+2667 files in other folders)
